--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://cloud.typography.com/6364294/7572592/css/fonts.css");
+
 :root {
   --dark-blue: rgb(0, 98, 161);
   --blue: #007ac9;
@@ -34,7 +36,7 @@
 
 html {
   height: 100%;
-  font-size: 16px;
+  font-size: 14px;
   font-family: var(--font-family);
 }
 
