--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --bus-blue: #0079c9;
   --green: #00985f;
   --purple: #8c4799;
+  --l_rail-green: #0098a1;
   --orange: #ff6319;
   --light-orange: #ffedf0;
   --teal: #00b2a9;
